<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">Search</string>
    <string name="enter_query">Enter search query</string>
    <string name="title_activity_query">Google Image Searcher</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_header">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site filter</string>
    <string name="save_button">Save</string>
    <string name="title_activity_foo">FooActivity</string>
    <string name="settings_button">Settings</string>
    <string name="default_site_filter">yahoo.com</string>
    <string name="enter_query_short">Search this</string>
    <string-array name="imagesize_array">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string-array name="colorfilter_array">
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="imagetype_array">
        <item>faces</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
</resources>
