<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QueryActivity" >

  	<Button
  	    android:id="@+id/btnSettings"
  	    style="?android:attr/buttonStyleSmall"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentRight="true"
  	    android:layout_alignParentTop="true"
  	  	android:onClick="onSettings"
  	    android:text="@string/settings_button" />

    <Button
        android:id="@+id/btnSearch2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSettings"
        android:onClick="onImageSearch"
        android:text="@string/search" />

    <EditText
        android:id="@+id/etQuery2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnSearch2"
        android:ems="10"
        android:hint="@string/enter_query_short"
        android:inputType="textMultiLine" >
    
        <requestFocus />
    </EditText>

    <GridView
        android:id="@+id/gvResults2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnSearch2"
        android:numColumns="3" >
    </GridView>
    
</RelativeLayout>
